[tool.poetry]
name = "darkmagentaminiaturerom"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
colorama = "^0.4.3"
discord = "^1.0.1"
flask = "^1.1.2"
pytz = "^2020.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
